--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e3132b7974158a99a7d22eee75ebcf5f"></script>
     <title>React App</title>
   </head>
   <body>
